--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "moongoose": "0.0.5",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "steam-game-browser": "^1.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
